Fix overflowing ad video

--- a/bwma_rubik_style.scss
+++ b/bwma_rubik_style.scss
@@ -2943,7 +2943,8 @@ input.form-submit {
     height: auto;
   }
 
-  .field-video {
+  .field-video,
+  .field-name-field-video {
     .field-items {
       margin: 0;
     }
